Fix overlapping at medium screen widths
Behaviour is still kinda at lower widths but this improves it.

--- a/userChrome.css
+++ b/userChrome.css
@@ -43,6 +43,7 @@
 
 #urlbar-container {
   min-width   : 0px !important;
+  flex-shrink: 1;
 }
 
 :root[uidensity="compact"] #nav-bar {
